--- a/EmployeeDirectory/EmployeeDirectory/Server/EmployeeDirectory.Server.csproj
+++ b/EmployeeDirectory/EmployeeDirectory/Server/EmployeeDirectory.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -16,6 +16,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Client\EmployeeDirectory.Client.csproj" />
     <ProjectReference Include="..\Shared\EmployeeDirectory.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 
