Move complete solution under "Demo" folder so it is more clear that this is a demo part of this talk (GitHub repository name is "Talk-Blazor-in-dotNET7").

--- a/Demo/EmployeeDirectory/EmployeeDirectory/Client/EmployeeDirectory.Client.csproj
+++ b/Demo/EmployeeDirectory/EmployeeDirectory/Client/EmployeeDirectory.Client.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
 	<Copyright>Copyright (c) 2022 Marko Lohert</Copyright>
 	<Authors>Marko Lohert</Authors>
-	<PackageLicenseFile>..\..\..\LICENSE</PackageLicenseFile>
+	<PackageLicenseFile>..\..\..\..\LICENSE</PackageLicenseFile>
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
   </PropertyGroup>
 
