--- a/Demo/EmployeeDirectory/EmployeeDirectory/Server/EmployeeDirectory.Server.csproj
+++ b/Demo/EmployeeDirectory/EmployeeDirectory/Server/EmployeeDirectory.Server.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
 	<Copyright>Copyright (c) 2022 Marko Lohert</Copyright>
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.0-rc.2.22476.2" />
   </ItemGroup>
 
   <ItemGroup>
